added lots of goodies

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="/public/Pictures/favicon_io_1/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boom Man/Mic</title>
+    <title>Boom Mic</title>
   </head>
   <body>
     <div id="app"></div>
