--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- Copied from https://fonts.google.com/ -->
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close,search" />
 
   <link rel="icon" type="image" href="/Pictures/favicon_io_1/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
